<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pomotivity</string>
    <string name="last_action">Last Action</string>
    <string name="current_time">25:00</string>
    <string name="stop_button">STOP</string>
    <string name="start_button">START</string>
    <string name="pause_button">PAUSE</string>
    <string name="resume_button">RESUME</string>
    <string name="action_settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="auto_start">Auto</string>

    <string name="project_hint">Set Current Project</string>
    <string name="project_add">+ Project</string>
    <string name="project_dialog_title">Create a new Project</string>
    <string name="project_dialog_hint">Project Name</string>
    <string name="project_dialog_ok">OK</string>
    <string name="project_dialog_cancel">Cancel</string>
    <string name="project_reserved_warning">%s is a reserved Project Name</string>
    <string name="dialog_fragment_tag">add_project_dialog</string>

</resources>
